# Passive_RatHindlimb_simulations

./: .gitignore  CalcInertiaParam.m  ConvertForces2mot.m  ConvertForces2mot_December.m  ConvertForces2mot_July.m  ConvertForces2mot_March2025.m  ConvertForces2mot_May.m  ConvertForces2mot_November.m  ConvertForces2mot_September.m  ConvertKin2trc.m  ConvertKin2trc_December.m  ConvertKin2trc_July.m  ConvertKin2trc_March2025.m  ConvertKin2trc_May.m  ConvertKin2trc_November.m  ConvertKin2trc_September.m  LagrangeEquationsForRatSystem.m  LoadData2MATLAB.m  LoadData2MATLAB_May.m  MTparam.mat  PlotInertiaParameters.m  PlotJointMoments.asv  PlotJointMoments.m  PlotJointMoments_SagittalPlane.m  PlotKinematics.m  PlotKinematics_MuscleRed.m  PlotKinematics_MuscleRed_SagittalPlane.m  PlotMTdata.m  PlotStiffnessDampingParameters.m  PlotlM0lTs.m  Polynomialsdummy_qdot.mat  README.md  Setup_FTforces.xml  Setup_IK_generic.xml  Setup_ScaleTool.xml  Setup_ScaleTool_December.xml  Setup_ScaleTool_July.xml  Setup_ScaleTool_March2025.xml  Setup_ScaleTool_May.xml  Setup_ScaleTool_November.xml  (+32 more)
DataDecember/: datadecember_description.txt
DataMarch2025/: datamarch2025_description.txt
ExternalFuction_InterniaOpt/: CMakeLists.txt  generateMain.m
ExternalFunction/: generateMain.m
MuscleModel/: ForceEquilibrium_FtildeState.m  ForceEquilibrium_FtildeState_debug.m  ForceEquilibrium_lMtildeState.m  ForceEquilibrium_lMtildeState_forDebug.m  HillModel_RigidTendon.m  MomentArmIndices_3D.m  getForceLengthVelocityProperties.m  getShift.m
Polynomials/: Main_polynomials.m  MuscleInfo_subject.mat  (+6 more)
(+2 files in other folders)
